Bug 152689 - Fix the !ENABLE(INTL) build after r193493
Summary: Fix the !ENABLE(INTL) build after r193493
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 147610
  Show dependency treegraph
 
Reported: 2016-01-04 07:21 PST by Csaba Osztrogonác
Modified: 2016-01-04 09:43 PST (History)
7 users (show)

See Also:


Attachments
Patch (1.29 KB, patch)
2016-01-04 07:22 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2016-01-04 07:21:28 PST
build log:
../../Source/JavaScriptCore/runtime/NumberPrototype.cpp:79:62: error: unused parameter 'globalObject' [-Werror=unused-parameter]
Comment 1 Csaba Osztrogonác 2016-01-04 07:22:45 PST
Created attachment 268190 [details]
Patch
Comment 2 WebKit Commit Bot 2016-01-04 09:43:43 PST
Comment on attachment 268190 [details]
Patch

Clearing flags on attachment: 268190

Committed r194534: <http://trac.webkit.org/changeset/194534>
Comment 3 WebKit Commit Bot 2016-01-04 09:43:46 PST
All reviewed patches have been landed.  Closing bug.