Fix the !ENABLE(INTL) build after r193493 https://bugs.webkit.org/show_bug.cgi?id=152689

Reviewed by Alex Christensen.

* runtime/NumberPrototype.cpp:
(JSC::NumberPrototype::finishCreation):


Canonical link: https://commits.webkit.org/170772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194534 268f45cc-cd09-0410-ab3c-d52691b4dbfc